@@ -22,6 +22,8 @@ Changes in 3.1.3 --
 * Bug fixes:
   - fixed #1311 "NameError: name 'imp' is not defined" when importing
   - fixed search of generated files on macOS for some Unicode file names
+  - fixed selection of Python on macOS:
+    - select the system Python 2 or 3 according to LilyPond's version
 
 
 Changes in 3.1.2 -- Easter 2020
